# Tengine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  imgui.ini  vcpkg-configuration.json  vcpkg.json
shaders/: compute.comp  model.frag  model.vert  particle.vert  shader.frag
src/: main.cpp
